app/assets/stylesheets/custom.css.scss
// ---Courses---

div#courses {
  h1 {
    margin: 20px 0 20px 0;
    width: 200px;
    padding: 5px 10px;
    color: #fff;
    background-color: #f39c12;
    font-weight: 300;
    border-radius: 7px;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  div.course {
    margin-bottom: 30px;

    div.votable {
      width: 4%;
      float: left;
      text-align: right;

      i.glyphicon-arrow-up, i.glyphicon-arrow-down {
        margin: 0 5px 5px 0;
        display: block;

        &.down-arrow {
          left: 1px;
        }
      }
    }
  }

  div.content {
    width: 93%;
    display: inline-block;

    p.tags {
      width: 40%;
      margin: 10px 0 0 0;

      span.label {
        float: right;
        margin-left: 5px;
        margin-bottom: 5px;
      }
    }

    ul.list-inline {
      margin: 10px 0 0 0;
    }
  }
}

.navbar {
  background-color: #2c3e50 !important;
  border-color: #34495e !important;

  li {
    a {
      color: #fff !important;
    }
  }

  .navbar-brand {
    color: #fff !important;
    font-size: 22px;
    font-weight: 300;
    letter-spacing: 1px;
  }
}

div.course_likes {
  width: 78%;
}

hr.divider {
  border-color: #333333;
}

div#course_details {
  margin-top: 20px;
  h1 {
    span {
      padding: 5px 10px;
      color: #fff;
      background-color: #f39c12;
      font-weight: 300;
      border-radius: 7px;
      text-transform: uppercase;
      letter-spacing: 1px;
    }

    small {
      display: block;
      margin-left: 5px;
    }

    &#course-instructor {
      padding-bottom: 10px;
      border-bottom: 1px solid #aaa;
    }
  }

  h2 {
    margin: 5px 0 5px 5px;
    font-size: 20px;
    color: #777;
  }

  p {
    font-size: 14px;
    margin-left: 25px;
    margin-top: 10px;
  }

  h3 {
    color: #777;
    font-size: 18px;
    text-transform: lowercase;
    font-weight: 500;
    letter-spacing: 1px;
    margin-top: 0;
    margin-bottom: 10px;

    span {
      color: #000;
      text-transform: none;
      letter-spacing: 0;
      display: block;
      font-size: 14px;
      font-weight: 400;
      margin-left: 5px;
    }
  }
}

div.control-group {
  margin-bottom: 10px;

  abbr {
    display: none;
  }

  label {
    font-size: 16px;
  }

  textarea {
    width: 100%;
  }
}

input[type="submit"] {
  margin-bottom: 30px;
}

div.course-form-div {
  margin: 10px 0 0 0;

  form#course_form {
    input, textarea {
      padding: 6px 12px;
      border: 1px solid #CCCCCC;
      border-radius: 4px;
    }
  }
}

// ---Comments---

div#comments {
  div.comment {
    margin-bottom: 30px;

    div.votable {
      width: 4%;
      float: left;
      text-align: right;

      i.glyphicon-arrow-up, i.glyphicon-arrow-down {
        margin: 0 5px 5px 0;
        display: block;

        &.down-arrow {
          left: 1px;
        }
      }
    }

    div.content {
      width: 93%;
      float: left;
    }
  }
}

div.comment_likes {
  width: 78%;
}

div.comment-panel {
  margin-bottom: 5px;
}

